<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_patient"
            android:icon="@drawable/ic_menu_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_user_profile_patient"
            android:icon="@drawable/ic_person_40"
            android:title="@string/menu_user_profile" />
        <item
            android:id="@+id/nav_daftar_anak_patient"
            android:icon="@drawable/ic_child_care_24"
            android:title="@string/menu_daftar_anak" />
        <item
            android:id="@+id/nav_user_login_patient"
            android:icon="@drawable/ic_admin_panel_settings_24"
            android:title="@string/menu_user_login" />
        <item
            android:id="@+id/nav_pengaturan_patient"
            android:icon="@drawable/ic_menu_settings_24"
            android:title="@string/menu_pengaturan" />
        <item
            android:id="@+id/nav_logout_patient"
            android:icon="@drawable/ic_menu_logout_24"
            android:title="@string/menu_logout" />
    </group>
</menu>