<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_tambah"
                android:layout_width="190dp"
                android:layout_height="50dp"
                android:background="@drawable/shape_blue_primary"
                android:elevation="5dp"
                android:layout_marginTop="@dimen/dimen_16"
                android:layout_marginStart="@dimen/dimen_8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_add"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_add_24"
                    android:layout_marginStart="@dimen/dimen_8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_tambah_anak"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@id/iv_add"
                    app:layout_constraintTop_toTopOf="@id/iv_add"
                    app:layout_constraintBottom_toBottomOf="@id/iv_add" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_cari"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:elevation="5dp"
                android:hint="@string/hint_text_cari"
                android:textColorHint="?attr/colorTextHint"
                android:layout_marginTop="@dimen/dimen_8"
                app:boxStrokeColor="@color/box_stroke_color"
                app:boxStrokeWidth="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/red"
                app:hintTextColor="?attr/colorSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="@style/Rounded">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_cari"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="?attr/colorText" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="330dp"
                android:background="@drawable/shape"
                android:elevation="5dp"
                android:layout_marginTop="@dimen/dimen_8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_cari">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableLayout
                        android:id="@+id/table_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:stretchColumns="*">

                        <TableRow>
                            <TextView
                                android:padding="@dimen/dimen_8"
                                android:text="@string/text_header_nama_anak"
                                android:textStyle="bold" />

                            <TextView
                                android:padding="@dimen/dimen_8"
                                android:text="@string/text_header_nik_anak"
                                android:textStyle="bold" />

                            <TextView
                                android:padding="@dimen/dimen_8"
                                android:text="@string/text_header_jenis_kelamin_anak"
                                android:textStyle="bold" />

                            <TextView
                                android:padding="@dimen/dimen_8"
                                android:text="@string/text_header_tgl_lahir_anak"
                                android:textStyle="bold" />

                            <TextView
                                android:padding="@dimen/dimen_8"
                                android:text="@string/text_header_umur_anak"
                                android:textStyle="bold" />
                        </TableRow>
                    </TableLayout>
                </HorizontalScrollView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
